# SPLN2324

./: .gitignore  README.md
Aula10/: README.md  (+6 more)
Aula2/TPC2/: README.md  pyproject.toml
Aula2/TPC2/tests/: commands.md
Aula2/TPC2/word_freq/: __init__.py
Aula3/TPC3/: METADATA.json  Readme.md  makepyproject.py  pyproject.toml
TP1/src/: IndexedText.py  METADATA.json  dicionario_corpus.txt  dict_sentilex.py  frases.txt  hp_e_merda.txt  makepyproject.py  nltk_normalization.py  novo.py  novo2.py  pyproject.toml  sentilexpt.py  sentiment_analysis.py  sentiment_analysis2.py  stopwords.txt  teste.py  testes.py  vader.py
TP1/src/HP_EN/: HP_EN_IX.txt  HP_EN_VI.txt  HP_EN_VII.txt  HP_EN_VIII.txt  HP_EN_X.txt  HP_EN_XI.txt  HP_EN_XII.txt  HP_EN_XIII.txt  HP_EN_XIV.txt  HP_EN_XVI.txt  HP_EN_XVII.txt
TP1/src/LeIA/: my_leia.py
TP1/src/output/: output_HP_I.txt  output_HP_II.txt  output_HP_III.txt  output_HP_IV.txt  output_HP_IX.txt  output_HP_V.txt  output_HP_VI.txt  output_HP_VII.txt  output_HP_VIII.txt  output_HP_X.txt  output_HP_XI.txt  output_HP_XII.txt  output_HP_XIII.txt  output_HP_XIV.txt  output_HP_XV.txt  output_HP_XVI.txt  output_HP_XVII.txt  output_frases.txt
TP1/src/outputHP/: output_HP_I.txt  output_HP_II.txt  output_HP_III.txt  output_HP_IV.txt  output_HP_IX.txt  output_HP_V.txt  output_HP_VI.txt  output_HP_VII.txt  output_HP_VIII.txt  output_HP_X.txt  output_HP_XI.txt  output_HP_XII.txt  output_HP_XIII.txt  output_HP_XIV.txt  output_HP_XV.txt  output_HP_XVI.txt  output_HP_XVII.txt
TP1/src/sentilexpt/: __init__.py
TP1/src/updated_outputHP/: updated_output_HP_I.txt  updated_output_HP_II.txt  updated_output_HP_III.txt  updated_output_HP_IV.txt  updated_output_HP_IX.txt  updated_output_HP_V.txt  updated_output_HP_VI.txt  updated_output_HP_VII.txt  updated_output_HP_VIII.txt  updated_output_HP_X.txt  updated_output_HP_XI.txt  updated_output_HP_XII.txt  updated_output_HP_XIII.txt  updated_output_HP_XIV.txt  updated_output_HP_XV.txt  updated_output_HP_XVI.txt  updated_output_HP_XVII.txt
(+28 files in other folders)
