
    [build system]
    requires=["flit_core >=3.2,<4"]
    build-backend = "flit_core.buildapi"

    [project]
    name = "makepyproject"
    authors = [
        {name = "afonsoni", email = "pg52669@alunos.uminho.pt"}, number = "52669",
    ]

    version = "0.0.1"

    Classifiers = [
        "License :: OSI Approved :: MIT License",
    ]

    requires-python = ">=3.8"
    dynamic = ["description"]

    dependencies = [
        "jjcli",
        "jinja2"
    ]

    [project.scripts]
    makepyproject = "makepyproject:main"
    